--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
  
  <div class="footer-icons">
  
- <a href="#"><i class="fa fa-facebook"></i></a>
- <a href="#"><i class="fa fa-twitter"></i></a>
- <a href="#"><i class="fa fa-linkedin"></i></a>
- <a href="#"><i class="fa fa-github"></i></a>
+ <a href="#"><i class="fas fa-facebook"></i></a>
+ <a href="#"><i class="fas fa-twitter"></i></a>
+ <a href="#"><i class="fas fa-linkedin"></i></a>
+ <a href="#"><i class="fas fa-github"></i></a>
  
  </div>
  
