--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <h2>EV Range Calculator&nbsp;&nbsp;<a href="images/Range Estimator Documentation.pdf"><div class="tooltip"><i class="fa fa-info-circle" ></i><span class="tooltiptext">Range Estimator Documentation</span></div></a></h2>
         <form>
             <label for="no.ofpassangers">No.of Passangers:</label>
-            <input type="number" id="no.ofpassangers" min="1" max="5" name="no.ofpassangers"><br><br>
+            <input type="number" id="no.ofpassangers" min="01" max="05" value="1" name="no.ofpassangers"><br><br>
             <label for="batterycapacity">Battery Capacity:</label>
             <input type="range" min="30" max="100" value="50" class="bc" id="myRange1"><span id="bc"></span>KWh<br><br>
 
@@ -109,15 +109,15 @@
  <p class="footer-company-about">
 
     <span>About the college</span>
-    JSS Academy of Technical Education.<br>Bangalore<br>India-50061.
+    JSS Academy of Technical Education.<br>Bangalore<br>India-50060.
     </p>
  
  <div class="footer-icons">
  
-    <a href="#"><i class="fa fa-facebook"></i></a>
-    <a href="#"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-linkedin"></i></a>
-    <a href="#"><i class="fa fa-github"></i></a>
+    <a href="https://www.facebook.com/JSSATEBlore/"><i class="fa fa-facebook"></i></a>
+    <a href="https://twitter.com/jssateb?lang=en"><i class="fa fa-twitter"></i></a>
+    <a href="https://in.linkedin.com/school/j-s-s-academy-of-technical-education-bangalore/"><i class="fa fa-linkedin"></i></a>
+    
 </div>
  </div>
  
@@ -134,10 +134,10 @@
  
  <div class="footer-icons">
  
- <a href="#"><i class="fa fa-facebook"></i></a>
- <a href="#"><i class="fa fa-twitter"></i></a>
- <a href="#"><i class="fa fa-linkedin"></i></a>
- <a href="#"><i class="fa fa-github"></i></a>
+ <a href="https://www.facebook.com/people/Wynncom-Digital-Devices-Pvt-Ltd/100045722053408/"><i class="fa fa-facebook"></i></a>
+ <a href="https://twitter.com/wynncom?lang=en"><i class="fa fa-twitter"></i></a>
+ <a href="https://in.linkedin.com/company/wynncom-digital-devices-pvt-ltd?challengeId=AQEdlEwNzZ_wIgAAAXwNF3QSxRbz-qHX_ioTkhjI5rVaMkVubt8w2fh5ip8QFxLq3vmWPOFxwPLfX23n7OeT6quF5qw9WaMKCw&submissionId=15904615-c31e-a716-b5c1-bec786da6c2d"><i class="fa fa-linkedin"></i></a>
+ 
  
  </div>
  
